--- a/PinchTestApp/TestApp/TestApp.iOS/TestApp.iOS.csproj
+++ b/PinchTestApp/TestApp/TestApp.iOS/TestApp.iOS.csproj
@@ -88,10 +88,12 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="GestureEffect.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="TouchEffect.cs" />
     <Compile Include="TouchRecognizer.cs" />
+    <Compile Include="ZoomableScrollViewRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
