--- a/PinchTestApp/TestApp/TestApp/TestApp.csproj
+++ b/PinchTestApp/TestApp/TestApp/TestApp.csproj
@@ -40,15 +40,11 @@
     </Compile>
     <Compile Include="Controls\Gesture.cs" />
     <Compile Include="Controls\ZoomableScrollView.cs" />
+    <Compile Include="Extentions\DoubleExtention.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Effects\DoubleExtensions.cs" />
-    <Compile Include="Effects\TouchActionEventArgs.cs" />
-    <Compile Include="Effects\TouchActionEventHandler.cs" />
-    <Compile Include="Effects\TouchActionType.cs" />
-    <Compile Include="Effects\TouchEffect.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,9 +58,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MR.Gestures, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MR.Gestures.1.4.2\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\MR.Gestures.dll</HintPath>
-    </Reference>
     <Reference Include="SkiaSharp, Version=1.58.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <HintPath>..\..\packages\SkiaSharp.1.58.0\lib\portable-net45+win8+wpa81+wp8\SkiaSharp.dll</HintPath>
     </Reference>
